GDW-317 #test #time 15m #comment fix input alignment

--- a/src/app/login/reset-password/reset-password.component.scss
+++ b/src/app/login/reset-password/reset-password.component.scss
@@ -9,6 +9,9 @@
     .password, .validation-message {
       text-align: left;
     }
+    input {
+      margin-bottom: 24px;
+    }
     .action {
       text-align: left;
       padding-top: 10px;
